Implemented PUT /doctors/:id and PUT /patients/:id
